--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "classnames": "^2.2.6",
     "datepicker-nepali-reactjs": "0.0.8",
     "history": "^4.10.1",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.4.0",
     "node-sass": "^5.0.0",
     "react-chartjs-2": "^2.11.1",
+    "react-csv": "^2.0.3",
     "react-hook-form": "^6.15.1",
     "react-notifications-component": "^3.0.3",
     "react-router-dom": "^5.2.0",
