--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HMIS App",
-  "name": "Health Management Information System",
+  "short_name": "MOM App",
+  "name": "Mini Online Market",
   "icons": [
     {
       "src": "favicon.ico",
